kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: hothaifaz11/flask-ip:v1.2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: monitoring
  labels:
    app: flask-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30080
